Remove bg Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -104,7 +104,7 @@
       <li>
         <a href="https://www.remove.bg/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/remove-bg.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
