Duoload Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -134,7 +134,7 @@
       <li>
         <a href="http://duoload.verou.me/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/duoload.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
