Alessandro Barleze - Professor

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -685,6 +685,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://br.linkedin.com/in/alessandro-barleze-58065222" target="_blank">
+            <img src="../../base/images/barleze.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://br.linkedin.com/in/alessandro-barleze-58065222" target="_blank">Alessandro Barleze</a>
+          </h2>
+          <p>Linkedin | <a href="https://www.vhmind.com.br/" target="_blank"><mark>VHMIND - Site</mark> </a> </p>
+        </div>
+        <a class="resource-button" href="https://br.linkedin.com/in/alessandro-barleze-58065222" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://www.escavador.com/sobre/3742162/anelise-bittencourt-gerceski" target="_blank">
             <img src="../../base/images/anelise-gerceski.jpg" alt="#" />
           </a>
