Professor Adelson Tavares

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -670,6 +670,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://br.linkedin.com/in/adelsontav" target="_blank">
+            <img src="../../base/images/adelson.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://br.linkedin.com/in/adelsontav" target="_blank">Adelson Tavares</a>
+          </h2>
+          <p>Linkedin / <mark><a href="https://onimetal.myportfolio.com/" target="_blank">Portfolio</a></mark></p>
+        </div>
+        <a class="resource-button" href="https://br.linkedin.com/in/adelsontav" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="http://lattes.cnpq.br/8542486657160866" target="_blank">
             <img src="../../base/images/adriane-linhares.jpg" alt="#" />
           </a>
@@ -817,6 +832,21 @@
           <p>Currículo Lattes</p>
         </div>
         <a class="resource-button" href="http://lattes.cnpq.br/3174491883976462" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.escavador.com/sobre/576301/kristian-capeline" target="_blank">
+            <img src="../../base/images/kristian.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.escavador.com/sobre/576301/kristian-capeline" target="_blank">Kristian Capeline</a>
+          </h2>
+          <p>Escavador</p>
+        </div>
+        <a class="resource-button" href="https://www.escavador.com/sobre/576301/kristian-capeline" target="_blank">Veja</a>
       </li>
 
       <li>
