Professora Paula Rigo Tramujas

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -881,6 +881,21 @@
 
       <li>
         <div class="resource-icon">
+          <a href="https://www.escavador.com/sobre/6368016/paula-vizaco-rigo-cuellar-tramujas" target="_blank">
+            <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4772006E9" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.escavador.com/sobre/6368016/paula-vizaco-rigo-cuellar-tramujas" target="_blank">Paula Vizaco Rigo Cuéllar Tramujas</a>
+          </h2>
+          <p>Currículo Escavador</p>
+        </div>
+        <a class="resource-button" href="https://www.escavador.com/sobre/6368016/paula-vizaco-rigo-cuellar-tramujas" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href=" http://lattes.cnpq.br/0675607550446920" target="_blank">
             <img src="http://servicosweb.cnpq.br/wspessoa/servletrecuperafoto?tipo=1&id=K4487052A3" alt="#" />
           </a>
