Z Library - Link Updated

--- a/my/paginas/livros/index.html
+++ b/my/paginas/livros/index.html
@@ -176,17 +176,17 @@
          
       <li>
         <div class="resource-icon">
-          <a href="https://b-ok.lat/" target="_blank">
+          <a href="https://z-lib.is/" target="_blank">
             <img src="../../base/images/zlibrary.jpg" alt="zlibrary" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://b-ok.lat/" target="_blank">Z Library</a>
+            <a href="https://z-lib.is/" target="_blank">Z Library</a>
           </h2>
           <p>Part of Z-Library project. The world's largest ebook library</p>
         </div>
-        <a class="resource-button" href="https://b-ok.lat/" target="_blank">Veja</a>		
+        <a class="resource-button" href="https://z-lib.is/" target="_blank">Veja</a>		
       </li>
          
     </ul>
