Teste de compatibilidade - Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -164,7 +164,7 @@
       <li>
         <a href="https://search.google.com/test/mobile-friendly?utm_source=mft&utm_medium=redirect&utm_campaign=mft-redirect&utm_source=blog&utm_campaign=rc_blogpost" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/googleBlog.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
