Museum PHP - Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -179,7 +179,7 @@
       <li>
         <a href="http://museum.php.net/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/pho-musuem.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
