CDNJS Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -194,7 +194,7 @@
       <li>
         <a href="https://cdnjs.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/cdnjs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
