HTML Color Codes Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -209,7 +209,7 @@
       <li>
         <a href="https://html-color-codes.info/Codigos-de-Cores-HTML/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/html-color-codes.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
