You might not need Jquery Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -224,7 +224,7 @@
       <li>
         <a href="http://youmightnotneedjquery.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/no-jquery.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
