Pace - Updated Link

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -237,18 +237,18 @@
       </li> 
 
       <li>
-        <a href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">
+        <a href="https://codebyzach.github.io/pace/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">Pace</a>
+            <a href="https://codebyzach.github.io/pace/" target="_blank">Pace</a>
           </h2>
           <p>Automatic page load progress bar</p>
         </div>
-        <a class="resource-button" href="http://github.hubspot.com/pace/docs/welcome/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://codebyzach.github.io/pace/" target="_blank">Veja</a>
       </li> 
 
       <li>
