Pace Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -239,7 +239,7 @@
       <li>
         <a href="https://codebyzach.github.io/pace/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/pace.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
