Progressively Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -254,7 +254,7 @@
       <li>
         <a href="https://thinker3197.github.io/progressively/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/progressively.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
