Expo Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -285,7 +285,7 @@
       <li>
         <a href="https://expo.io/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/expo.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
