Multi Screen Resolution Teste Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -300,7 +300,7 @@
       <li>
         <a href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/multi-screen.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
