CSS Media Query Cheart Sheet Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -315,12 +315,12 @@
       <li>
         <a href="https://gist.github.com/bartholomej/8415655" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-media-queries.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://gist.github.com/bartholomej/8415655" target="_blank">CSS Media Query Cheat Sheet </a>
+            <a href="https://gist.github.com/bartholomej/8415655" target="_blank">CSS Media Query Cheat Sheet</a>
           </h2>
           <p>CSS Grid</p>
         </div>
