--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -330,7 +330,7 @@
       <li>
         <a href="https://www.indiehackers.com/products" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/16711932_1370501686378035_8249126912425636107_n.jpg?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=IIqiBJueGFQAX-aVefh&_nc_ht=scontent.fcwb2-1.fna&tp=6&oh=44e2cb547487e314979638b04d359f1c&oe=5FC4EE6B" alt="#" />
+            <img src="../../base/images/indie-hackers.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
