--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -345,7 +345,7 @@
       <li>
         <a href="https://responsivebreakpoints.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/responsive-breakpoints.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
