React Awesome Slider Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -360,7 +360,7 @@
       <li>
         <a href="https://github.com/rcaferati/react-awesome-slider?fbclid=IwAR13-s76qtkRInWr58Rq7P1bGapbkbwCe6F11i7r1Oa-U5TWiphOUZqdIiI" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/react-awesome-slider.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
