Diferenças do React Navigation v5 Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -375,7 +375,7 @@
       <li>
         <a href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/medium.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
