Online Text Tools Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -390,7 +390,7 @@
       <li>
         <a href="https://onlinetexttools.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/onlineTextTools.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
