Real Favicon Generator Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -405,7 +405,7 @@
       <li>
         <a href="https://realfavicongenerator.net/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/real-favicon.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
