Stack Blitz Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -420,7 +420,7 @@
       <li>
         <a href="https://stackblitz.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/stack-blitz.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
