Nanoreset Label Updated

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -671,7 +671,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://br.linkedin.com/in/adelsontav" target="_blank">
-            <img src="../../base/images/adelson.jpg" alt="#" />
+            <img src="../../base/images/professor-adelson.jpg" alt="#" />
           </a>
         </div>
         <div class="resource-details">
