--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -440,7 +440,7 @@
       <li>
         <a href="https://github.com/tiaanduplessis/nanoreset" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/nanoreset.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
