Sass and Less Comparison Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -486,7 +486,7 @@
       <li>
         <a href="https://gist.github.com/chriseppstein/674726" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/sass-less-comparison.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
