Neumorphism and Lead Verou Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -516,7 +516,7 @@
       <li>
         <a href="https://neumorphism.io" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/neumorphism.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -531,7 +531,7 @@
       <li>
         <a href="https://lea.verou.me/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/lea-verou.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
