Material UI Link Updatad

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -906,18 +906,18 @@
       </li>
 
       <li>
-        <a href="https://material-ui.com/pt/" target="_blank">
+        <a href="https://mui.com/" target="_blank">
           <div class="resource-icon">
             <img src="https://material-ui.com/static/logo_raw.svg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://material-ui.com/pt/" target="_blank">Material UI</a>
+            <a href="https://mui.com/" target="_blank">Material UI</a>
           </h2>
           <p>Componentes React para um desenvolvimento mais rápido e fácil.</p>
         </div>
-        <a class="resource-button" href="https://material-ui.com/pt/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://mui.com/" target="_blank">Veja</a>
       </li>
 
       <li>
