Material UI Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -908,7 +908,7 @@
       <li>
         <a href="https://mui.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://material-ui.com/static/logo_raw.svg" alt="#" />
+            <img src="../../base/images/mui.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
