AOS Animate Scroll Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -923,7 +923,7 @@
       <li>
         <a href="https://michalsnik.github.io/aos/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/aos.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
