--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -943,7 +943,7 @@
       <li>
         <a href="https://reactjs.org/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/1010076_477783955633350_1900224762_n.png?_nc_cat=109&ccb=2&_nc_sid=1eb0c7&_nc_ohc=F9VpNjMHc4gAX9LdGio&_nc_ht=scontent.fcwb2-2.fna&oh=71dacb0f1437a444655525dee718cc90&oe=5FC7848B" alt="#" />
+            <img src="../../base/images/reactjs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
