--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -863,7 +863,7 @@
       <li>
         <a href="https://mdbootstrap.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/mdb.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
