Awesome Javascript Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1069,7 +1069,7 @@
       <li>
         <a href="https://github.com/sorrycc/awesome-javascript" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/awesome-javascript.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
