Awesome React Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1084,7 +1084,7 @@
       <li>
         <a href="https://github.com/enaqx/awesome-react" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/awesome-react.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
