LottieFiles Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1154,7 +1154,7 @@
       <li>
         <a href="https://lottiefiles.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/51095779_2321977624480504_6775227806117789696_o.jpg?_nc_cat=107&ccb=2&_nc_sid=1eb0c7&_nc_ohc=bdmq3clqQfoAX_UA-cH&_nc_ht=scontent.fcwb2-2.fna&tp=6&oh=4b045b17277fca449d4d675ac72a4f1a&oe=5FC62C26" alt="#" />
+            <img src="../../base/images/lottieFiles.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
