CSS PIN Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1229,7 +1229,7 @@
       <li>
         <a href="https://webkul.github.io/csspin/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/csspin.jpg" alt="#" />
           </div>  
         </a>
         <div class="resource-details">
