Particles JS Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1244,7 +1244,7 @@
       <li>
         <a href="http://vincentgarreau.com/particles.js/#default" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/particlesjs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
