--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1259,7 +1259,7 @@
       <li>
         <a href="https://github.com/mike-zarandona/StickyStack.js" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/stickStack-js.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
