Anime JS Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1274,7 +1274,7 @@
       <li>
         <a href="http://animejs.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/anime.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
