Animista Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1289,7 +1289,7 @@
       <li>
         <a href="http://animista.net" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/animista.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
