Hamburgers Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1304,7 +1304,7 @@
       <li>
         <a href="https://jonsuh.com/hamburgers/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/amburgers.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
