SweetAlert2 Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1319,7 +1319,7 @@
       <li>
         <a href="https://sweetalert2.github.io/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/sweetalert2.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
