Rellax Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1334,7 +1334,7 @@
       <li>
         <a href="https://dixonandmoe.com/rellax/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/rellax-js.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
