Pixijs Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1349,7 +1349,7 @@
       <li>
         <a href="https://www.pixijs.com/?fbclid=IwAR1oJmqahhBsXzFZXpPPMyAYDOWzeq8sDFqBMZBtfvzNPRjwxaw4Bn_qzZc" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/pixijs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
