3D FlipBook Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1364,7 +1364,7 @@
       <li>
         <a href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/3d-flipBook.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
