Reveal JS Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1379,7 +1379,7 @@
       <li>
         <a href="https://revealjs.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/revealjs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
