Heroicons Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1429,7 +1429,7 @@
       <li>
         <a href="https://www.hongkiat.com/blog/best-free-javascript-modal-window-plugins/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/hongkiat.webp" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -1449,7 +1449,7 @@
       <li>
         <a href="https://heroicons.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/heroicon.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
