Remix Icon Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1584,7 +1584,7 @@
       <li>
         <a href="https://remixicon.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/remix-icon.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
