CSS Icons Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1599,7 +1599,7 @@
       <li>
         <a href="https://css.gg/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-icons.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
