--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1614,7 +1614,7 @@
       <li>
         <a href="https://icons8.com/animated-icons" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/animated-icons8.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
