--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1629,7 +1629,7 @@
       <li>
         <a href="https://lordicon.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/lord-icon.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
