Free Mysql Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1811,7 +1811,7 @@
       <li>
         <a href="https://remotemysql.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/free-mysql.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
