db4free Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1826,7 +1826,7 @@
       <li>
         <a href="https://www.db4free.net/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/db4free.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
