000webhost Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1841,7 +1841,7 @@
       <li>
         <a href="https://br.000webhost.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/000webhost.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
