CSS Grid Generator Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1941,7 +1941,7 @@
       <li>
         <a href="https://cssgrid-generator.netlify.com/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-grid.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
