Layoutit Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1956,7 +1956,7 @@
       <li>
         <a href="https://grid.layoutit.com/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/layoutit.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
