Griddy Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1971,7 +1971,7 @@
       <li>
         <a href="https://griddy.io/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/griddy.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
