Vue Grid Generator Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1986,7 +1986,7 @@
       <li>
         <a href="https://vue-grid-generator.netlify.app/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/vue-grid-generator.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
