CSS Grid Layout Generator

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2001,7 +2001,7 @@
       <li>
         <a href="https://css-grid-layout-generator.pw/" target="_blank">
           <div class="resource-icon"> 
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/css-grid-layout-generator.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
