Bootstrap 4 cheat sheet Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2046,7 +2046,7 @@
       <li>
         <a href="https://hackerthemes.com/bootstrap-cheatsheet/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/bootstrap4-cheat-sheet.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
