--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2181,7 +2181,7 @@
       <li>
         <a href="https://html.spec.whatwg.org/multipage/semantics.html#semantics" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/the-elements-of-html.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
