Javascript The Right Way Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2076,7 +2076,7 @@
       <li>
         <a href="http://jstherightway.org/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/javascript-the-right-way.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
