Dev Docs Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2121,7 +2121,7 @@
       <li>
         <a href="https://devdocs.io/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/dev-docs.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
