Dev Hints Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2196,7 +2196,7 @@
       <li>
         <a href="https://devhints.io/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/devhints.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
