Visualizing Git Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2211,7 +2211,7 @@
       <li>
         <a href="https://git-scm.com/docs" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/git.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
@@ -2226,7 +2226,7 @@
       <li>
         <a href="https://git-school.github.io/visualizing-git/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/git.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
