--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2396,7 +2396,7 @@
       <li>
         <a href="https://obsidian.md/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/obsidian.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
