--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -471,7 +471,7 @@
       <li>
         <a href="https://autoprefixer.github.io/" target="_blank">
           <div class="resource-icon"> 
-            <img src="https://autoprefixer.github.io/assets/logo.png" alt="#" />
+            <img src="../../base/images/autoprefixer-css.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
