Semantic UI Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -728,7 +728,7 @@
       <li>
         <a href="https://semantic-ui.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://semantic-ui.com/images/logo.png" alt="#" />
+            <img src="../../base/images/semantic-ui.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
