Jeet Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -848,7 +848,7 @@
       <li>
         <a href="http://jeet.gs/" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/451070890273292288/5bS2enZw_400x400.png" alt="#" />
+            <img src="../../base/images/jeet.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
