Road Map Web Developer Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2416,7 +2416,7 @@
       <li>
         <a href="https://github.com/kamranahmedse/developer-roadmap" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/roadmap.sh" alt="#" />
           </div>
         </a>
         <div class="resource-details">
