--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2431,7 +2431,7 @@
       <li>
         <a href="https://github.com/adam-golab/react-developer-roadmap/blob/master/README-PTBR.md" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/roadmap.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
