Web Code Tools Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2461,7 +2461,7 @@
       <li>
         <a href="https://webcode.tools/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/web-code-tools.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
