167 Favorite Javascript utilities Label Updated

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2476,7 +2476,7 @@
       <li>
         <a href="https://1loc.dev/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/favorite-javascript-utilities.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
