--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
     <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
     <p class="wow fadeInDown text-hero">Criação de materiais gráficos<br> Gerenciamento de Redes Sociais<br> Edição de Vídeo e Produção de Sites</p>
-    <li class="btn-portfolio"><a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> </li>
+    <li class="btn-portfolio">
+      <a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">
+        <strong>Portfolio</strong>
+      </a> 
+    </li>
   </div> <!--a href="#works-section-->
   <div class="social-icons-banner fa-lg">
     <a href="https://api.whatsapp.com/send?phone=+55(41)%2098832%202873&text=Ol%C3%A1,%20Robson" target="_blank"><i class="fa fa-whatsapp"></i></a>
