--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -76,7 +76,7 @@
       <li>
         <a href="https://www.thinkwithgoogle.com/intl/pt-br/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/41511994_1127762367381906_970186954152869888_n.png?_nc_cat=102&ccb=2&_nc_sid=1eb0c7&_nc_eui2=AeGyZ1qQ_31q8A_Q-i2LhPxcUjy7spktyABSPLuymS3IADvo3euMbgivv4Nos03-S2fA5TN8A4SBBjoLmM4oxRFT&_nc_ohc=goYmzICrF4gAX98IL8p&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=30&oh=95b6a4c056c2250d42ce050a7c45adef&oe=5FFDA19B" alt="#" />
+            <img src="../../base/images/think-with-google.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
