NielsenIQ Ebit Thumbnail and links Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -480,18 +480,18 @@
       <div class="linha"></div>
       
       <li>
-        <a href="https://www.ebit.com.br/webshoppers/webshoppersfree" target="_blank">
+        <a href="https://www.ebit.com.br/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/nielseniq.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://www.ebit.com.br/webshoppers/webshoppersfree" target="_blank">Webshoppers - ebit</a>
+            <a href="https://www.ebit.com.br/" target="_blank">NielsenIQ Ebit</a>
           </h2>
-          <p>ebit - relatório Webshoppers sobre Comércio eletrônico Brasileiro</p>
+          <p>Visão 360° do e-commerce brasileiro</p>
         </div>
-        <a class="resource-button" href="https://www.ebit.com.br/webshoppers/webshoppersfree" target="_blank">Veja</a>
+        <a class="resource-button" href="https://www.ebit.com.br/" target="_blank">Veja</a>
       </li>
       
       <li>
