IAB Brasil - Pesquisa Digital Adspend 2022 - Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -495,18 +495,18 @@
       </li>
       
       <li>
-        <a href="https://iabbrasil.com.br/pesquisa-digital-adspend-2019/" target="_blank">
+        <a href="https://iabbrasil.com.br/pesquisa-digital-adspend-2022/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/iab-brasil.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://iabbrasil.com.br/pesquisa-digital-adspend-2019/" target="_blank">IAB Brasil</a>
+            <a href="https://iabbrasil.com.br/pesquisa-digital-adspend-2022/" target="_blank">IAB Brasil</a>
           </h2>
-          <p>Pesquisa Digital Adspend 2019 - Investimento em Mídias Digitais</p>
+          <p>Pesquisa Digital Adspend 2022 - Investimento em Mídias Digitais</p>
         </div>
-        <a class="resource-button" href="https://iabbrasil.com.br/pesquisa-digital-adspend-2019/" target="_blank">Veja</a>
+        <a class="resource-button" href="https://iabbrasil.com.br/pesquisa-digital-adspend-2022/" target="_blank">Veja</a>
       </li>
       
       <li>
