--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -512,7 +512,7 @@
       <li>
         <a href="https://socialblade.com/" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/social-blade.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
