--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -533,7 +533,7 @@
       <li>
         <a href="glossario-investidor.html" target="_blank">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/glossario.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
