Glossário de Marketing Digital Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -279,7 +279,7 @@
       <li>
         <a href="glossario-marketing-digital.html">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/glossario.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
