e-mail Marketing Thumbnail Updated

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -294,7 +294,7 @@
       <li>
         <a href="email-marketing.html">
           <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="../../base/images/e-mail-marketing.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
