--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -27,6 +27,21 @@
       <div class="linha"></div>
        
       <li>
+        <a href="https://wetransfer.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/wetransfer.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://wetransfer.com/" target="_blank">We Transfer</a>
+          </h2>
+          <p>Para envio de arquivos grandes</p>
+        </div>
+        <a class="resource-button" href="https://wetransfer.com/" target="_blank">Veja</a>
+      </li>  
+       
+      <li>
         <a href="https://placeholder.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/placehold.jpg" alt="#" />
