--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -42,6 +42,21 @@
       </li>  
        
       <li>
+        <a href="https://fromsmash.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/from-smash.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://fromsmash.com/" target="_blank">Smash</a>
+          </h2>
+          <p>Outra alternativa para envio de arquivos grandes</p>
+        </div>
+        <a class="resource-button" href="https://fromsmash.com/" target="_blank">Veja</a>
+      </li>  
+       
+      <li>
         <a href="https://placeholder.com/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/placehold.jpg" alt="#" />
